--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
    "license": "MIT",
    "dependencies": {
       "bcrypt": "^5.1.0",
+      "cors": "^2.8.5",
       "dotenv": "^16.0.3",
       "express": "^4.18.2",
       "http-status-codes": "^2.2.0",
@@ -18,6 +19,7 @@
       "typeorm-extension": "^2.3.0"
    },
    "devDependencies": {
+      "@types/cors": "^2.8.13",
       "@types/express": "^4.17.14",
       "@types/jsonwebtoken": "^8.5.9",
       "@types/lodash": "^4.14.191",
